[TF-81] Togglable choices in filter - always show checked filter values after reload

--- a/src/Resources/styles/front/common/todo.less
+++ b/src/Resources/styles/front/common/todo.less
@@ -57,11 +57,11 @@ button.active {
     display: none;
 }
 
-.js-product-filter-box-button.inactive {
+.js-product-filter-box-button-show.inactive, .js-product-filter-box-button-hide.inactive {
     display: none;
 }
 
-.js-product-filter-box-button {
+.js-product-filter-box-button-show, .js-product-filter-box-button-hide {
     cursor: pointer;
     text-decoration: underline;
 }
