--- a/src/Resources/styles/front/common/layout/footer.less
+++ b/src/Resources/styles/front/common/layout/footer.less
@@ -1,5 +1,6 @@
 @footer-top-social-height: 66px;
 @footer-top-links-title: 120px;
+@footer-top-scroll-top-button-icon: 15px;
 @footer-tab-border-color: @color-border-dark;
 @footer-tab-arrow-size: 11px;
 @footer-tab-height: 52px;
@@ -26,6 +27,10 @@
 
         &__button-icon {
             transform: rotate(180deg);
+            height: @footer-top-scroll-top-button-icon;
+            margin-right: 10px;
+
+            font-size: @footer-top-scroll-top-button-icon;
         }
     }
 
