--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -58,10 +58,7 @@
 
                                 {% if productView.getRandomGiftName() is not null %}
                                     <div class="list-products__item__info__gift">
-                                        <span class="list-products__item__info__gift__icon">
-                                            <i class="svg svg-gift"></i>
-                                        </span>
-                                        <span class="list-products__item__info__gift__text-colored">{{ 'Dárek'|trans }}:</span>
+                                        <span class="list-products__item__info__gift__title">{{ 'Dárek'|trans }}</span>
                                         {{ productView.getRandomGiftName() }}
                                     </div>
                                 {% endif %}
