--- a/src/Resources/styles/front/common/components/list/products.less
+++ b/src/Resources/styles/front/common/components/list/products.less
@@ -7,7 +7,6 @@
 @list-products-item-title-rows: 2;
 @list-products-item-font-size: 16px;
 @list-products-item-line-height: 18px;
-@list-products-item-stores-height: 18px;
 @list-products-item-info-gap: 15px;
 
 @list-products-item-variants-arrow-size: 15px;
@@ -149,7 +148,7 @@
                 display: block;
                 height: 2 * @list-products-item-line-height;
                 line-height: @list-products-item-line-height;
-                margin-bottom: 14px;
+                margin-bottom: 7px;
                 overflow: hidden;
 
                 font-size: @list-products-item-font-size;
@@ -159,69 +158,18 @@
             }
 
             &__gift {
+                display: inline-block;
                 margin-bottom: 10px;
-                line-height: 17px;
+                padding: 0 6px;
+                line-height: 21px;
 
-                font-size: 13px;
+                font-size: @font-size-small;
+                background-color: rgba(213,48,48,0.15);
+                color: @color-red;
 
-                &__icon {
-                    display: inline-block;
-                    position: relative;
-                    width: @font-size;
-
-                    .svg {
-                        position: absolute;
-                        left: 0;
-                        top: -14px;
-
-                        color: @color-base;
-                        font-size: @font-size;
-                    }
-                }
-
-                &__text-colored {
+                &__title {
                     text-transform: uppercase;
                     font-weight: 700;
-                    color: @color-add;
-                }
-
-                &__stores {
-                    display: block;
-                    line-height: @list-products-item-stores-height;
-
-                    font-size: @font-size;
-
-                    @media @query-md {
-                        height: @list-products-item-stores-height;
-                    }
-                }
-            }
-
-            &__gift {
-                margin-top: 5px;
-                line-height: 17px;
-
-                font-size: 13px;
-
-                &__icon {
-                    display: inline-block;
-                    position: relative;
-                    width: @font-size;
-
-                    .svg {
-                        position: absolute;
-                        left: 0;
-                        top: -14px;
-
-                        color: @color-base;
-                        font-size: @font-size;
-                    }
-                }
-
-                &__text-colored {
-                    text-transform: uppercase;
-                    font-weight: 700;
-                    color: @color-add;
                 }
             }
 
