--- a/templates/Front/Content/Category/hoverMenu.html.twig
+++ b/templates/Front/Content/Category/hoverMenu.html.twig
@@ -1,6 +1,6 @@
-{% macro rightContent(categoriesWithLazyLoadedVisibleChildren, modificationCLass = '', dropdownMenu) %}
+{% macro rightContent(categoriesWithLazyLoadedVisibleChildren, modificationClass = '', dropdownMenu, showImage) %}
     {% if categoriesWithLazyLoadedVisibleChildren|length > 0 %}
-        <ul class="list-menu {{ modificationCLass }}">
+        <ul class="list-menu {{ modificationClass }}">
             {% for categoryWithLazyLoadedVisibleChildren in categoriesWithLazyLoadedVisibleChildren %}
                 {% set category = categoryWithLazyLoadedVisibleChildren.category %}
                 {% set hasChildren = categoryWithLazyLoadedVisibleChildren.hasChildren %}
@@ -17,24 +17,37 @@
                         </div>
                         {% if hasChildren %}
                             <div class="list-menu__item__options">
-                                {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu--without-margin list-menu--direction-column') }}
+                                {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu--without-margin list-menu--direction-column', false, showImage) }}
                             </div>
                         {% endif %}
                     </li>
                 {% else %}
-                    <li class="list-menu__item">
-                        <a href="{{ url('front_product_list', { id: category.id }) }}"
-                        class="list-menu__item__link list-menu__item__link--level-{{ category.level }}">
-                            {{ category.name }}
-                        </a>
-                        {% if hasChildren %}
-                            {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu--without-margin list-menu--submenu') }}
-                        {% endif %}
-                    </li>
+                    {% if category.level < 3 or loop.index < 5 %}
+                        <li class="list-menu__item">
+                            {% if showImage %}
+                                <a href="{{ url('front_product_list', { id: category.id }) }}">
+                                    {{ image(category, { alt: category.name, size: 'dropdown' }) }}
+                                </a>
+                            {% endif %}
+                            <a href="{{ url('front_product_list', { id: category.id }) }}"
+                            class="list-menu__item__link list-menu__item__link--level-{{ category.level }}">
+                                {{ category.name }}
+                            </a>
+                            {% if hasChildren and category.level == 2 %}
+                                {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu--without-margin list-menu--submenu', false, false) }}
+                            {% endif %}
+                        </li>
+                    {% elseif category.level == 3 and loop.index == 5 %}
+                        <li class="list-menu__item">
+                            <a href="{{ url('front_product_list', { id: category.parent.id }) }}">
+                                {{ 'a další kategorie'|transchoice(loop.length - 4, {'count': loop.length}) }}
+                            </a>
+                        </li>
+                    {% endif %}
                 {% endif %}
             {% endfor %}
         </ul>
     {% endif %}
 {% endmacro %}
 
-{{ _self.rightContent(categoriesWithLazyLoadedVisibleChildren, '', dropdownMenu) }}
+{{ _self.rightContent(categoriesWithLazyLoadedVisibleChildren, '', dropdownMenu, showImage) }}
