design: edit font size of alt font family

--- a/src/Resources/styles/front/common/components/box/blog.less
+++ b/src/Resources/styles/front/common/components/box/blog.less
@@ -69,12 +69,11 @@
 
     &__title {
         display: block;
-        text-align: center;
-        margin: 0 auto 33px;
+        line-height: 42px;
 
         color: @color-base;
         font-weight: 700;
-        font-size: 36px;
+        font-size: 45px;
     }
 
     &__categories {
