--- a/src/Resources/styles/front/common/components/box/chooser.less
+++ b/src/Resources/styles/front/common/components/box/chooser.less
@@ -115,7 +115,7 @@
 
             color: @color-price;
             font-family: @font-alt;
-            font-size: 15px;
+            font-size: @font-size + 1px;
             font-weight: 800;
 
             @media @query-lg {
