--- a/src/Resources/styles/front/common/components/box/list.less
+++ b/src/Resources/styles/front/common/components/box/list.less
@@ -98,7 +98,9 @@
             margin-bottom: 11px;
             line-height: 45px;
 
-            font-size: 30px;
+            color: @color-base;
+            font-family: @font-alt;
+            font-size: 25px;
             font-weight: 700;
         }
 
@@ -117,7 +119,7 @@
                 line-height: @box-list-description-line-height;
 
                 font-family: @font-alt;
-                font-size: @box-list-description-font-size;
+                font-size: @box-list-description-font-size + 1px;
             }
         }
 
