--- a/src/Resources/styles/front/common/components/box/promo-image.less
+++ b/src/Resources/styles/front/common/components/box/promo-image.less
@@ -53,7 +53,7 @@
             line-height: 30px;
 
             font-family: @font-alt;
-            font-size: 18px;
+            font-size: @font-size-big + 1px;
 
             br {
                 display: none;
