--- a/src/Resources/styles/front/common/components/in/user-text.less
+++ b/src/Resources/styles/front/common/components/in/user-text.less
@@ -12,7 +12,7 @@
     line-height: @in-user-text-font-size + 16px;
 
     font-family: @font-alt;
-    font-size: @in-user-text-font-size;
+    font-size: @in-user-text-font-size + 1px;
 
     a {
         position: relative;
@@ -79,7 +79,7 @@
 
         color: @color-base;
         font-family: @font-alt;
-        font-size: @in-user-text-title-font-size;
+        font-size: @in-user-text-title-font-size + 1px;
         font-weight: 700;
 
         &--center {
