--- a/src/Resources/styles/front/common/components/list/articles-blog.less
+++ b/src/Resources/styles/front/common/components/list/articles-blog.less
@@ -78,11 +78,11 @@
                 margin-bottom: 10px;
 
                 font-family: @font-alt;
-                font-size: 16px;
+                font-size: 16px + 1px;
             }
 
             &__date {
-                font-size: 12px;
+                font-size: 12px + 1px;
                 font-weight: 700;
                 font-family: @font-alt;
             }
