--- a/src/Resources/styles/front/common/components/list/articles.less
+++ b/src/Resources/styles/front/common/components/list/articles.less
@@ -147,7 +147,7 @@
                 margin-bottom: 10px;
 
                 color: @color-base;
-                font-size: 16px;
+                font-size: 16px + 1px;
                 font-family: @font-alt;
 
                 .list-articles--white & {
@@ -158,7 +158,7 @@
             }
 
             &__date {
-                font-size: 12px;
+                font-size: 12px + 1px;
                 font-weight: 700;
                 font-family: @font-alt;
 
