--- a/src/Resources/styles/front/common/components/list/categories.less
+++ b/src/Resources/styles/front/common/components/list/categories.less
@@ -9,7 +9,28 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin: 0 -@list-categories-item-border-size -@list-categories-item-border-size 0;
+    margin-left: -@list-categories-item-gap;
+
+    &__title {
+        margin-bottom: 30px;
+
+        font-family: @font-alt;
+        font-size: @font-size-big + 1px; 
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
+    &__link {
+        position: relative;
+        overflow: hidden;
+        text-align: center;
+        
+        border-radius: @radius;
+
+        @media @query-lg {
+            width: 100%;
+        }
+    }
 
     &__item {
         display: flex;
