--- a/src/Resources/styles/front/common/components/list/stores.less
+++ b/src/Resources/styles/front/common/components/list/stores.less
@@ -78,7 +78,7 @@
                     white-space: nowrap;
 
                     font-family: @font-alt;
-                    font-size: 14px;
+                    font-size: @font-size-small + 1px;
                     font-weight: 400;
                     text-transform: none;
                 }
@@ -88,7 +88,7 @@
                 width: 100%;
                 text-align: center;
 
-                font-size: 14px;
+                font-size: @font-size-small + 1px;
                 font-family: @font-alt;
 
                 @media @query-md {
