--- a/src/Resources/styles/front/common/layout/footer.less
+++ b/src/Resources/styles/front/common/layout/footer.less
@@ -299,7 +299,7 @@
         margin: 0;
 
         color: @color-f;
-        font-size: @font-size-big;
+        font-size: @font-size-big + 1px;
         font-family: @font-alt;
 
         @media @query-vl {
@@ -367,7 +367,7 @@
         line-height: 18px;
         margin-bottom: 8px;
 
-        font-size: 12px;
+        font-size: 12px + 1px;
         font-family: @font-alt;
 
         @media @query-lg {
@@ -382,7 +382,7 @@
         line-height: 18px;
         margin-bottom: 31px;
 
-        font-size: 11px;
+        font-size: 11px + 1px;
         font-family: @font-alt;
 
         @media @query-lg {
@@ -391,7 +391,7 @@
     }
 
     &__shopsys {
-        font-size: 12px;
+        font-size: 12px + 1px;
         font-family: @font-alt;
 
         &__image {
