--- a/src/Resources/styles/front/common/components/box/detail.less
+++ b/src/Resources/styles/front/common/components/box/detail.less
@@ -92,7 +92,7 @@
 
             color: @color-base;
             font-family: @font-alt;
-            font-size: 18px;
+            font-size: @font-size-big + 1px;
         }
     }
 
