--- a/src/Resources/styles/front/common/components/box/order.less
+++ b/src/Resources/styles/front/common/components/box/order.less
@@ -83,7 +83,7 @@
 
             color: @color-base;
             font-family: @font-alt;
-            font-size: 24px;
+            font-size: 24px + 1px;
             font-weight: 700;
             text-transform: uppercase;
         }
