--- a/src/Resources/styles/front/common/components/box/prelist.less
+++ b/src/Resources/styles/front/common/components/box/prelist.less
@@ -9,7 +9,7 @@
 
         color: @color-base;
         font-family: @font-alt;
-        font-size: @box-prelist-title-font-size;
+        font-size: @box-prelist-title-font-size + 1px;
         font-weight: 700;
     }
 }
