--- a/src/Resources/styles/front/common/components/box/preview.less
+++ b/src/Resources/styles/front/common/components/box/preview.less
@@ -101,7 +101,7 @@
         margin-bottom: 20px;
 
         color: @color-base;
-        font-size: 14px;
+        font-size: @font-size-small + 1px;
         font-family: @font-alt;
     }
 
