--- a/src/Resources/styles/front/common/components/box/special-offer.less
+++ b/src/Resources/styles/front/common/components/box/special-offer.less
@@ -43,7 +43,7 @@
             line-height: 56px;
 
             font-family: @font-alt;
-            font-size: 30px;
+            font-size: 30px + 1px;
             letter-spacing: 1.5px;
         }
 
@@ -52,7 +52,7 @@
             line-height: 38px;
 
             font-family: @font-alt;
-            font-size: 30px;
+            font-size: 30px + 1px;
             font-weight: bold;
             letter-spacing: 3px;
 
