--- a/src/Resources/styles/front/common/layout/header.less
+++ b/src/Resources/styles/front/common/layout/header.less
@@ -181,7 +181,7 @@
     justify-content: center;
     align-items: center;
 
-    font-size: @font-size-extra-small;
+    font-size: @font-size-extra-small + 1px;
     font-family: @font-alt;
 
     @media @query-vl {
