--- a/src/Resources/styles/front/common/layout/header/search.less
+++ b/src/Resources/styles/front/common/layout/header/search.less
@@ -25,7 +25,7 @@
                 line-height: 32px;
                 padding: 0 0 0 17px;
 
-                font-size: @font-size-small;
+                font-size: @font-size-small + 1px;
                 font-family: @font-alt;
                 border: none;
                 box-shadow: none;
