--- a/src/Resources/styles/front/common/layout/header/top-bar.less
+++ b/src/Resources/styles/front/common/layout/header/top-bar.less
@@ -62,7 +62,7 @@
                 }
 
                 &__link {
-                    font-size: @font-size-extra-small;
+                    font-size: @font-size-extra-small + 1px;
                     font-family: @font-alt;
                     color: @color-base;
 
@@ -74,7 +74,7 @@
                 &__text {
                     display: flex;
 
-                    font-size: 11px;
+                    font-size: 11px + 1px;
                     font-family: @font-alt;
                     text-transform: uppercase;
 
