design: edit small css issues after CR

--- a/src/Resources/styles/front/common/components/box/list.less
+++ b/src/Resources/styles/front/common/components/box/list.less
@@ -127,7 +127,7 @@
             padding: 20px;
 
             border-radius: @radius-big;
-            background: @color-base;
+            background-color: @color-base;
 
             @media @query-lg {
                 width: calc(~"100% - @{box-list-description-width}");
