--- a/src/Resources/styles/front/common/components/in/paging.less
+++ b/src/Resources/styles/front/common/components/in/paging.less
@@ -49,17 +49,17 @@
                 transition: @transition;
 
                 &:hover {
-                    background: darken(@color-primary, 5%);
+                    background-color: darken(@color-primary, 5%);
                     color: @color-f;
                 }
 
                 &--active {
-                    background: @color-f;
+                    background-color: @color-f;
                     color: @color-base;
                     border: 1px solid @color-border-dark;
 
                     &:hover {
-                        background: @color-f;
+                        background-color: @color-f;
                         color: @color-base;
                     }
                 }
