design: add style for horizontal menu

--- a/src/Resources/styles/front/common/layout/header.less
+++ b/src/Resources/styles/front/common/layout/header.less
@@ -44,6 +44,7 @@
     display: none;
 
     @media @query-vl {
+        position: relative;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
