--- a/src/Resources/styles/front/common/components/list/menu.less
+++ b/src/Resources/styles/front/common/components/list/menu.less
@@ -1,4 +1,7 @@
+@list-menu-gap: 10px;
+@list-menu-select-spacer-height: 10px;
 @list-menu-padding-right: 25px;
+@list-menu-open-background-color: @color-light;
 @list-menu-arrow-size: 10px;
 @list-menu-columns-count: 3;
 @list-menu-columns-gap: 30px;
@@ -6,29 +9,19 @@
 @list-menu-item-height: 36px;
 @list-menu-item-link-padding: 15px;
 
+@list-menu-submenu-image-size: 80px;
+
 // global settings
 .list-menu {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    margin: 10px 0;
+    margin: @list-menu-gap 0;
     padding-left: 0;
 
     @media @query-vl {
         flex-direction: row;
         margin-left: -@list-menu-item-link-padding;
-    }
-
-    &--submenu {
-        padding-left: 20px;
-    }
-
-    &--without-margin {
-        margin: 0;
-    }
-
-    &--direction-column {
-        flex-direction: column;
     }
 
     &--footer {
@@ -64,7 +57,6 @@
     }
 
     &__item {
-        position: relative;
         display: block;
         width: 100%;
 
@@ -91,12 +83,35 @@
         }
 
         &__select {
+            position: relative;
+
+            &:before {
+                @media @query-vl {
+                    content: '';
+                    display: none;
+                    position: absolute;
+                    left: 0;
+                    top: 100%;
+                    width: 100%;
+                    height: @list-menu-select-spacer-height;
+                    
+                    background-color: @list-menu-open-background-color;
+
+                    .open & {
+                        display: block;
+                    }
+                }
+            }
+
             .open & {
                 position: relative;
                 z-index: @z-index-above + 1;
 
-                background-color: @color-f;
                 border-radius: @radius @radius 0 0;
+
+                @media @query-vl {
+                    background-color: @list-menu-open-background-color;
+                }
             }
         }
 
@@ -104,16 +119,15 @@
             @media @query-vl {
                 display: none;
                 position: absolute;
-                left: 0;
-                top: @list-menu-item-height - 1px;
+                left: -@list-menu-item-link-padding;
+                right: -@list-menu-item-link-padding;
+                top: @list-menu-item-height + @list-menu-gap + @list-menu-select-spacer-height;
                 z-index: @z-index-above;
                 padding: 5px 0;
-                width: calc(~"100% + 10px");
                 min-width: 200px;
 
-                background-color: @color-f;
-                border-radius: 0 @radius @radius @radius;
-                box-shadow: @box-shadow-outer;
+                background-color: @list-menu-open-background-color;
+                border-radius: 0 0 @radius @radius;
 
                 .open &  {
                     display: block;
@@ -141,12 +155,13 @@
                     display: inline-block;
                     height: @list-menu-arrow-size;
                     margin-left: 5px;
-                    opacity: 0.5;
+                    opacity: 0.6;
 
                     font-size: @list-menu-arrow-size;
 
                     .open & {
                         transform: rotate(180deg);
+                        color: @color-turquoise;
                     }
                 }
             }
@@ -174,6 +189,10 @@
 
             .open & {
                 color: @color-base;
+
+                @media @query-vl {
+                    color: @color-primary;
+                }
             }
 
             .list-menu--footer & {
@@ -181,6 +200,117 @@
                 line-height: 30px;
 
                 font-size: @font-size-small;
+            }
+        }
+    }
+
+    &__submenu {
+        .reset-ul();
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+
+        @media @query-vl {
+            padding: 35px 30px 0;
+            flex-direction: row;
+        }    
+
+        &--children {
+            padding: 0;
+            flex-direction: column;
+        }
+
+        &__item {
+            display: flex;
+            flex-direction: row;
+            margin-bottom: 10px;
+
+            @media @query-vl {
+                width: @calc-base / 3;
+                margin-bottom: 38px;
+            }
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            .list-menu__submenu--children & {
+                margin-bottom: 0;
+            }
+
+            &__image {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 5px;
+                width: @list-menu-submenu-image-size;
+                height: @list-menu-submenu-image-size;
+
+                border-radius: @radius-medium;
+                box-shadow: 0 10px 20px 0 rgba(0,0,0,0.1);
+                background-color: @color-f;
+                font-size: 0;
+            }
+
+            &__content {
+                padding-left: 20px;
+
+                @media @query-vl {
+                    width: calc(~"100% - @{list-menu-submenu-image-size}");
+                }
+
+                .list-menu__submenu--children & {
+                    @media @query-vl {
+                        padding-left: 0;
+                    }
+                }
+            }
+
+            &__title {
+                line-height: 18px;
+
+                font-size: @font-size;
+                color: @color-base;
+
+                @media @query-vl {
+                    font-weight: 700;
+                    font-size: 16px;
+                }
+
+                &:hover {
+                    color: @color-base;
+                }
+
+                .list-menu__submenu--children & {
+                    @media @query-vl {
+                        line-height: 21px;
+
+                        font-weight: 400;
+                        font-size: @font-size-small + 1px;
+                        font-family: @font-alt;
+                    }
+                }
+            }
+
+            &__more {
+                padding-left: 20px;
+                line-height: 18px;
+
+                font-weight: 600;
+                font-size: @font-size;
+                color: @color-base;
+
+                @media @query-vl {
+                    margin-top: 5px;
+                    padding-left: 0;
+
+                    font-size: @font-size-small + 1px;
+                    font-family: @font-alt;
+                }
+
+                &:hover {
+                    color: @color-base;
+                }
             }
         }
     }
