--- a/src/Resources/styles/front/common/core/variables.less
+++ b/src/Resources/styles/front/common/core/variables.less
@@ -6,7 +6,8 @@
 @path-font: '../fonts';
 
 @import url('https://fonts.googleapis.com/css?family=Kanit:300,400,500,600,700&display=swap&subset=latin-ext');
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700&display=swap');
+
 
 
 // Fonts
