--- a/templates/Front/Content/Category/hoverMenu.html.twig
+++ b/templates/Front/Content/Category/hoverMenu.html.twig
@@ -1,6 +1,6 @@
-{% macro rightContent(categoriesWithLazyLoadedVisibleChildren, modificationClass = '', dropdownMenu, showImage) %}
+{% macro rightContent(categoriesWithLazyLoadedVisibleChildren, modificationClass = '', dropdownMenu, showImage, children) %}
     {% if categoriesWithLazyLoadedVisibleChildren|length > 0 %}
-        <ul class="list-menu {{ modificationClass }}">
+        <ul class="{% if not children %}list-menu{% else %}list-menu__submenu{% endif %} {{ modificationClass }}">
             {% for categoryWithLazyLoadedVisibleChildren in categoriesWithLazyLoadedVisibleChildren %}
                 {% set category = categoryWithLazyLoadedVisibleChildren.category %}
                 {% set hasChildren = categoryWithLazyLoadedVisibleChildren.hasChildren %}
@@ -17,29 +17,31 @@
                         </div>
                         {% if hasChildren %}
                             <div class="list-menu__item__options">
-                                {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu--without-margin list-menu--direction-column', false, showImage) }}
+                                {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, '', false, showImage, true) }}
                             </div>
                         {% endif %}
                     </li>
                 {% else %}
                     {% if category.level < 3 or loop.index < 5 %}
-                        <li class="list-menu__item">
+                        <li class="list-menu__submenu__item">
                             {% if showImage %}
-                                <a href="{{ url('front_product_list', { id: category.id }) }}">
+                                <a class="list-menu__submenu__item__image" href="{{ url('front_product_list', { id: category.id }) }}">
                                     {{ image(category, { alt: category.name, size: 'dropdown' }) }}
                                 </a>
                             {% endif %}
-                            <a href="{{ url('front_product_list', { id: category.id }) }}"
-                            class="list-menu__item__link list-menu__item__link--level-{{ category.level }}">
-                                {{ category.name }}
-                            </a>
-                            {% if hasChildren and category.level == 2 %}
-                                {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu--without-margin list-menu--submenu', false, false) }}
-                            {% endif %}
+                            <div class="list-menu__submenu__item__content">
+                                <a href="{{ url('front_product_list', { id: category.id }) }}"
+                                class="list-menu__submenu__item__title">
+                                    {{ category.name }}
+                                </a>
+                                {% if hasChildren and category.level == 2 %}
+                                    {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu__submenu--children', false, false, true) }}
+                                {% endif %}
+                            </div>
                         </li>
                     {% elseif category.level == 3 and loop.index == 5 %}
-                        <li class="list-menu__item">
-                            <a href="{{ url('front_product_list', { id: category.parent.id }) }}">
+                        <li class="list-menu__submenu__item">
+                            <a class="list-menu__submenu__item__more" href="{{ url('front_product_list', { id: category.parent.id }) }}">
                                 {{ 'a další kategorie'|transchoice(loop.length - 4, {'count': loop.length}) }}
                             </a>
                         </li>
@@ -50,4 +52,4 @@
     {% endif %}
 {% endmacro %}
 
-{{ _self.rightContent(categoriesWithLazyLoadedVisibleChildren, '', dropdownMenu, showImage) }}
+{{ _self.rightContent(categoriesWithLazyLoadedVisibleChildren, '',dropdownMenu, showImage, children) }}
