design: edit small css issues after test

--- a/src/Resources/styles/front/common/components/box/filter.less
+++ b/src/Resources/styles/front/common/components/box/filter.less
@@ -19,7 +19,7 @@
     }
 
     &.active-mobile {
-        width: calc(~"100% - @{web-padding-small} * 2");
+        width: calc(~"100% - @{web-padding-small}");
         margin-right: 0;
 
         @media @query-vl {
