--- a/src/Resources/styles/front/common/components/in/flag.less
+++ b/src/Resources/styles/front/common/components/in/flag.less
@@ -34,12 +34,11 @@
     }
 
     &--product-list {
-        top: 100%;
-        margin-top: 10px;
-    }
-
-    @media @query-tablet {
-        display: none;
+        bottom: -5px;
+        
+        @media @query-md {
+            bottom: -27px;
+        }
     }
 
     &__item {
