--- a/src/Resources/styles/front/common/components/list/products.less
+++ b/src/Resources/styles/front/common/components/list/products.less
@@ -166,6 +166,7 @@
                 font-size: @font-size-small;
                 background-color: rgba(213,48,48,0.15);
                 color: @color-red;
+                border-radius: @radius-very-small;
 
                 &__title {
                     text-transform: uppercase;
