remove Brand::$type and the related functionality
- we do not need to have a default (main shopsys) brand on our project
- the former state was blocking product creation on production, as there
is no brand with the required type

--- a/templates/Admin/Content/MergadoFeed/feed.xml.twig
+++ b/templates/Admin/Content/MergadoFeed/feed.xml.twig
@@ -36,7 +36,9 @@
                 <BENEFIT>{{ benefit }}</BENEFIT>
             {% endfor -%}
         {% endif -%}
-        <BRAND>{{ item.brand }}</BRAND>
+        {% if item.brand is not null %}
+            <BRAND>{{ item.brand }}</BRAND>
+        {% endif %}
         <PRICE>{{ item.priceWithoutVat }}</PRICE>
         <PRICE_VAT>{{ item.priceWithVat }}</PRICE_VAT>
         <CURRENCY>{{ item.currency }}</CURRENCY>
