--- a/templates/Front/Inline/Product/productFlags.html.twig
+++ b/templates/Front/Inline/Product/productFlags.html.twig
@@ -1,3 +1,3 @@
 {% import 'Front/Inline/Product/productFlagsMacro.html.twig' as productFlags %}
 
-{{ productFlags.list(flags, classAddition, onlyFirst, sellingPrice) }}
+{{ productFlags.list(flags, classAddition, onlyFirst, sellingPrice, variantsCount) }}
