--- a/templates/Front/Inline/Product/productFlagsMacro.html.twig
+++ b/templates/Front/Inline/Product/productFlagsMacro.html.twig
@@ -1,10 +1,16 @@
-{% macro list(productFlags, classAddition, onlyFirst, sellingPrice) %}
+{% macro list(productFlags, classAddition, onlyFirst, sellingPrice, variantsCount) %}
     {% if productFlags|length > 0 or (sellingPrice is not null and sellingPrice.hasHigherStandardPrice) %}
         <div class="in-flag dont-print {{ classAddition }}">
-            {% if not onlyFirst and sellingPrice.hasHigherStandardPrice %}
-                {{ _self.detail('%discountValue%% sleva'|trans({'%discountValue%': sellingPrice.pricePercentageDifference}), '#d53030') }}
+            {% if not onlyFirst %}
+                {% if sellingPrice.hasHigherStandardPrice %}
+                    {{ _self.detail('%discountValue%% sleva'|trans({'%discountValue%': sellingPrice.pricePercentageDifference}), '#d53030') }}
+                {% endif %}
+
+                {% if variantsCount > 0 %}
+                    {{ _self.detail('Počet variant'|transchoice(variantsCount, {'%variantsCount%': variantsCount}), '#00aed8') }}
+                {% endif %}
             {% endif %}
-            
+
             {% for productFlag in productFlags %}
                 {% if (onlyFirst and loop.first) or not onlyFirst %}
                     {{ _self.detail(productFlag.name, productFlag.rgbColor) }}
