[TF-184] Update product gift list in product list and product detail

--- a/src/Resources/styles/front/common/todo.less
+++ b/src/Resources/styles/front/common/todo.less
@@ -76,3 +76,31 @@ button.active {
     color: #d53030;
     float: right;
 }
+
+//TODO KOD: TF-184
+.list-products__item__info__gift__count {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.box-detail__item__info__gift__row {
+    display: block;
+}
+
+//SAME AS .list-products__item__info__gift
+.box-detail__item__info__gift {
+    display: inline-block;
+    margin-bottom: 10px;
+    padding: 0 6px;
+    line-height: 21px;
+    font-size: 14px;
+    background-color: rgba(213,48,48,0.15);
+    color: #d53030;
+    border-radius: 2px;
+}
+
+//SAME AS .list-products__item__info__gift__title
+.box-detail__item__info__gift__title {
+    text-transform: uppercase;
+    font-weight: 700;
+}
