[TF-184] Add all product gifts automatically in cart

--- a/src/Resources/styles/front/common/todo.less
+++ b/src/Resources/styles/front/common/todo.less
@@ -83,12 +83,12 @@ button.active {
     text-transform: uppercase;
 }
 
-.box-detail__item__info__gift__row {
+.box-detail__item__info__gift__row, .table-cart__item__info__gift_row {
     display: block;
 }
 
 //SAME AS .list-products__item__info__gift
-.box-detail__item__info__gift {
+.box-detail__item__info__gift, .table-cart__item__info__gift {
     display: inline-block;
     margin-bottom: 10px;
     padding: 0 6px;
@@ -100,7 +100,7 @@ button.active {
 }
 
 //SAME AS .list-products__item__info__gift__title
-.box-detail__item__info__gift__title {
+.box-detail__item__info__gift__title, .table-cart__item__info__gift__title {
     text-transform: uppercase;
     font-weight: 700;
 }
