design: edit small css issues

--- a/assets/styles/frontend/common/components/box/dropdown.less
+++ b/assets/styles/frontend/common/components/box/dropdown.less
@@ -198,7 +198,7 @@
 
             @media @query-lg {
                 position: absolute;
-                display: inline-block;
+                display: inline-flex;
                 width: @box-dropdown-arrow-size;
                 height: @box-dropdown-arrow-size;
                 top: 50%;
@@ -223,7 +223,7 @@
 
                 &--up {
                     .svg {
-                        transform: rotate(180deg) translateY(50%);
+                        transform: rotate(180deg);
 
                         display: none;
 
