--- a/assets/styles/frontend/common/components/list/menu.less
+++ b/assets/styles/frontend/common/components/list/menu.less
@@ -154,6 +154,7 @@
 
                 @media @query-vl {
                     display: inline-block;
+                    vertical-align: middle;
                     height: @list-menu-arrow-size;
                     margin-left: 5px;
                     opacity: 0.6;
